# WebApplication

WebClient/: CMakeLists.txt  GlobalVar.hpp  InputProcessing.cpp  InputProcessing.hpp  InvalidInputFormat.cpp  InvalidInputFormat.hpp  SingleThreadPool.cpp  SingleThreadPool.hpp  Worker.cpp  Worker.hpp  main.cpp  readme.rtf
WebServer/: main.cpp
